academy_index_page: spacing on tiles corrected, add hover behaviour to filters, add img on mobile filter fixes #265

--- a/apps/core/static/scss/_academy-list.scss
+++ b/apps/core/static/scss/_academy-list.scss
@@ -23,6 +23,10 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+
+    &:hover {
+        background-color: #f0f0f0;
+    }
 }
 
 .academy-list__topic-selected-square {
@@ -52,6 +56,10 @@
 
 .academy-list__intro {
     margin-bottom: $spacer-v / 2;
+}
+
+.academy-list__topic-img {
+
 }
 
 //desktop size
